# madrob

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: madrob.launch  madrob_dummy.launch
misc/: 20-madrob.rules  Kt.ipynb
nodes/: bridge_handle.py
resources/: constant_2000g_ccw.yaml  constant_2000g_cw.yaml  empty_lut.yaml  empty_lut_ccw.yaml  spring_lut.yaml
scripts/: door_cli.py  dummy_door.py  dummy_handle.py  dummy_passage.py  handle_calibration.py
