<?xml version="1.0"?>
<package format="2">
  <name>madrob</name>
  <version>0.0.1</version>
  <description>MADROB</description>

  <author email="d.rizzi@novalabs.io">Nova Labs</author>
  <maintainer email="d.rizzi@novalabs.io">Nova Labs</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>madrob_msgs</exec_depend>

  <export>
  </export>
</package>
